_includes/manuals/1.10/4.3.10_smartproxy_ssl.md

The smart proxy can work in SSL mode, where both sides verify and trust each other.  Requests from Foreman will only be accepted if the SSL certificate can be verified.  Since proxies abstract a high level of control over your infrastructure, the configuration and security of keys and certificates is important.

#### Using Puppet CA certificates

Since Foreman integrates with Puppet heavily, it is recommended to use the Puppet Certificate Authority (CA) to secure proxy access.  See the _Security Communciations with SSL_ section for more advanced installations (multiple or internal CAs).

If the smart proxy host is not managed by Puppet, you will need to generate a certificate - skip forward to the generate section.

When using Puppet's certificates, the following lines will be required in puppet.conf to relax permissions to the `puppet` group.  The `foreman` and/or `foreman-proxy` users should then be added to the `puppet` group.

<pre>
[main]
privatekeydir = $ssldir/private_keys { group = service }
hostprivkey = $privatekeydir/$certname.pem { mode = 640 }
</pre>

##### Configuring the proxy

Configure the locations to the SSL files in `/etc/foreman-proxy/settings.yml`, plus the list of trusted Foreman hosts:

<pre>
:ssl_certificate: /var/lib/puppet/ssl/certs/FQDN.pem
:ssl_ca_file: /var/lib/puppet/ssl/certs/ca.pem
:ssl_private_key: /var/lib/puppet/ssl/private_keys/FQDN.pem

:trusted_hosts:
- foreman.corp.com
#- foreman.dev.domain
</pre>

##### Generating a certificate

To generate a certificate for a proxy host that isn't managed by Puppet, do the following:

1. Generate a new certificate on your puppetmaster: `puppet cert --generate <proxy-FQDN>`
2. Copy the certificates and key from the puppetmaster to the smart proxy in `/etc/foreman-proxy`:<ol>
  <li>/var/lib/puppet/ssl/certs/ca.pem</li>
  <li>/var/lib/puppet/ssl/certs/proxy-FQDN.pem</li>
  <li>/var/lib/puppet/ssl/private_keys/proxy-FQDN.pem</li></ol>

Follow the configuration section above, however use the `/etc/foreman-proxy` paths instead of the Puppet defaults.

##### Configuring Foreman

For Foreman to connect to an SSL-enabled smart proxy, it needs configuring with SSL certificates in the same way.  If the Foreman system is managed by Puppet, it will already have these, else certificates can be generated following the above instructions.

The locations of the certificates are managed in the *Settings* page, under *Provisioning* with the _ssl_ca_file_, _ssl_certificate_ and _ssl_priv_key_ settings.  By default these will point to the Puppet locations - for manually generated certificates, or non-standard locations, they may have to be changed.

Lastly, when adding the smart proxy in Foreman, ensure the URL begins with `https://` rather than `http://`.
