_includes/manuals/1.12/4.3.10_smartproxy_ssl.md

The smart proxy can work in SSL mode, where both sides verify and trust each other.  Requests from Foreman will only be accepted if the SSL certificate can be verified.  Since proxies abstract a high level of control over your infrastructure, the configuration and security of keys and certificates is important.

#### Using Puppet CA certificates

Since Foreman integrates with Puppet heavily, it is recommended to use the Puppet Certificate Authority (CA) to secure proxy access.  See the _Security Communciations with SSL_ section for more advanced installations (multiple or internal CAs).

If the smart proxy host is not managed by Puppet, you will need to generate a certificate - skip forward to the generate section.

When using Puppet's certificates, the following lines will be required in puppet.conf to relax permissions to the `puppet` group.  The `foreman` and/or `foreman-proxy` users should then be added to the `puppet` group.

<pre>
[main]
privatekeydir = $ssldir/private_keys { group = service }
hostprivkey = $privatekeydir/$certname.pem { mode = 640 }
</pre>

##### Configuring the proxy

Configure the locations to the SSL files in `/etc/foreman-proxy/settings.yml`, plus the list of trusted Foreman hosts:

<pre>
:ssl_certificate: /var/lib/puppet/ssl/certs/FQDN.pem
:ssl_ca_file: /var/lib/puppet/ssl/certs/ca.pem
:ssl_private_key: /var/lib/puppet/ssl/private_keys/FQDN.pem

:trusted_hosts:
- foreman.corp.com
#- foreman.dev.domain
</pre>

Under a Puppet 4 AIO installation, substitute above paths with `/etc/puppetlabs/puppet/ssl/`.

##### SSL cipher suites

By default, the smart proxy permits the following SSL cipher suites:

* ECDHE-RSA-AES128-GCM-SHA256
* ECDHE-RSA-AES256-GCM-SHA384
* ECDHE-RSA-AES128-CBC-SHA
* ECDHE-RSA-AES256-CBC-SHA
* AES128-GCM-SHA256
* AES256-GCM-SHA384
* AES128-SHA256
* AES256-SHA256
* AES128-SHA
* AES256-SHA

Please note, the smart proxy uses the OpenSSL suite naming scheme. For more information on suite names please see [the OpenSSL docs](https://www.openssl.org/docs/manmaster/apps/ciphers.html#CIPHER-SUITE-NAMES).

Certain users may require to disable certain cipher suites due to security policies or newly discovered weaknesses. This can be done by using the `:ssl_disabled_ciphers:` option in `/etc/foreman-proxy/settings.yml`.  For example:

<pre>
:ssl_disabled_ciphers: ['AES128-SHA','AES256-SHA']
</pre>

##### Generating a certificate

To generate a certificate for a proxy host that isn't managed by Puppet, do the following:

1. Generate a new certificate on your puppetmaster: `puppet cert --generate <proxy-FQDN>`
2. Copy the certificates and key from the puppetmaster to the smart proxy in `/etc/foreman-proxy`:<ol>
  <li>/var/lib/puppet/ssl/certs/ca.pem</li>
  <li>/var/lib/puppet/ssl/certs/proxy-FQDN.pem</li>
  <li>/var/lib/puppet/ssl/private_keys/proxy-FQDN.pem</li></ol>

Under a Puppet 4 AIO installation, substitute above paths with `/etc/puppetlabs/puppet/ssl/`.

Follow the configuration section above, however use the `/etc/foreman-proxy` paths instead of the Puppet defaults.

##### Configuring Foreman

For Foreman to connect to an SSL-enabled smart proxy, it needs configuring with SSL certificates in the same way.  If the Foreman system is managed by Puppet, it will already have these, else certificates can be generated following the above instructions.

The locations of the certificates are managed in the *Settings* page, under *Provisioning* with the _ssl_ca_file_, _ssl_certificate_ and _ssl_priv_key_ settings.  By default these will point to the Puppet locations - for manually generated certificates, or non-standard locations, they may have to be changed.

Lastly, when adding the smart proxy in Foreman, ensure the URL begins with `https://` rather than `http://`.
